--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,15 +31,15 @@ spring:
   #mysql
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://172.30.66.253:3306/sled_dev?characterEncoding=utf-8&useSSL=false
-    username: sled
-    password: Sled_1234
+    url: jdbc:mysql://localhost:3306/easyMeeting?characterEncoding=utf-8&useSSL=false
+    username: root
+    password: root
     #time
   jackson:
     time-zone: GMT+8
   #redis
   redis:
-    host: 172.30.66.6
+    host: localhost
     port: 6379
     database: 0
     timeout: 180000
